--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,35 @@
+body {
+  margin: 0;
+}
+
+header {
+  width: 100%;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.2);
+  padding: 1em;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  margin: 0 5% 0 15%;
+}
+
+h1 {
+  margin: 0;
+  justify-content: center;
+}
+
 .main-container {
   width: 70%;
-  margin: 0 auto;
+  margin: 5% auto 0px;
 }
 
 #bar-chart {
   width: 100%;
+  max-width: 600px;
 }
